MySQL CDC adapter and Kafka upserts